--- a/floor-plan/src/app/globals.css
+++ b/floor-plan/src/app/globals.css
@@ -6,8 +6,8 @@
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --background-color: whitesmoke;
+  --background-color: whitesmoke;
 
   --primary-glow: conic-gradient(
     from 180deg at 50% 50%,
