--- a/floor-plan/src/app/home/page.module.css
+++ b/floor-plan/src/app/home/page.module.css
@@ -145,7 +145,13 @@
   padding: 20px;
   margin: 10px;
   border: 1px solid #000000; 
+  border-radius: 12px;
   background: #f9f9f9; 
+}
+
+.fileItem:hover {
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1), 0 6px 20px rgba(0,0,0,0.19); /* Add shadow for depth */
+  transform: scale(1.05); /* Slightly increase size */
 }
 
 .fileIcon {
