--- a/floor-plan/src/app/editor/editor.css
+++ b/floor-plan/src/app/editor/editor.css
@@ -1,61 +1,154 @@
-.app-container {
+.main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
-	width: 100vw;
-  }
-  
-  .file-chooser-container {
-	transition: all 0.5s ease-in-out;
-  }
-  
-  
-  .text-center {
-	text-align: center;
-  }
-  
-  .file-input {
-	display: none;
-  }
-  
-  .file-label {
-	cursor: pointer;
-	background-color: white;
-	border: 2px dashed #ccc;
-	border-radius: 8px;
-	padding: 16px;
-	display: inline-flex;
-	align-items: center;
-	gap: 12px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .file-label:hover {
-	background-color: #f9f9f9;
-  }
-  
-  .upload-icon {
-	color: #3498db;
-  }
-  
-  .pdf-viewer {
-	display: none;
-	width: 100%;
-	flex-grow: 1;
-	transition: all 0.5s ease-in-out;
-  }
-  
-  .file-chooser-small {
+	/* Center vertically */
+	padding: 6rem;
+	min-height: 100vh;
+	background-color: #d6dbe0;
+	color: black;
+}
+
+.canvasBox {
 	position: absolute;
-	bottom: 30%; /* Adjust if necessary to ensure visibility */
-	right: 10%; /* Adjust if necessary to ensure visibility */
-	z-index: 10; /* Ensures the file chooser stays above the PDF viewer */
-  }
-  
-  /* Ensure .pdf-viewer does not overlap the file chooser */
-  .pdf-viewer-visible {
-	display: block;
-	width: 100%; /* Adjust width if necessary to prevent overlap */
-  }
+	height: 560px;
+	width: 900px;
+	border-radius: 8px;
+	background-color: #FFFFFF;
+	margin: auto;
+	left: 52%;
+	top: 55%;
+	transform: translate(-50%, -50%);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	/* Center vertically */
+	font-family: "Helvetica";
+	background-color: #FFFFFF;
+	color: #515151;
+	padding: 10px;
+}
+
+/* Controls height and width of the react pdf rendered */
+.react-pdf__Page__canvas {
+	margin: 0 auto;
+	width: 80% !important;
+	height: 100% !important;
+}
+
+.lutronLogo {
+	background-color: d6dbe0;
+	width: 15%;
+}
+
+.button {
+	cursor: pointer;
+	font-size: 16px;
+	min-height: 30px;
+	min-width: 90px;
+	padding: 8px 16px;
+	width: 20%;
+	border-radius: 2px;
+	border: 1px solid;
+	background-color: #1E75BB;
+}
+
+.navbar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 20px;
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+}
+
+.navbarBrand {
+	margin: 0;
+	font-size: 1.5rem;
+}
+
+.navbarNav {
+	display: flex;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.navbarItem {
+	margin-left: 1rem;
+}
+
+.sideToolBar {
+	position: absolute;
+	top: 100;
+	left: 0;
+	margin-left: 40px;
+	width: 100px;
+	height: 50%;
+	background-color: #f0f0f0;
+	border-right: 1px solid #ccc;
+	border-radius: 15px;
+	padding: 10px;
+}
+
+/* Enable hover only on non-touch devices */
+@media (hover: hover) and (pointer: fine) {
+	.card:hover {
+		background: rgba(var(--card-rgb), 0.1);
+		border: 1px solid rgba(var(--card-border-rgb), 0.15);
+	}
+
+	.card:hover span {
+		transform: translateX(4px);
+	}
+}
+
+@media (prefers-reduced-motion) {
+	.card:hover span {
+		transform: none;
+	}
+}
+
+/* Mobile */
+@media (max-width: 700px) {
+	.content {
+		padding: 4rem;
+	}
+
+	.center {
+		padding: 8rem 0 6rem;
+	}
+
+	.center::before {
+		transform: none;
+		height: 300px;
+	}
+
+}
+
+/* Tablet and Smaller Desktop */
+@media (min-width: 701px) and (max-width: 1120px) {
+	.grid {
+		grid-template-columns: repeat(2, 50%);
+	}
+}
+
+@media (prefers-color-scheme: dark) {
+	.vercelLogo {
+		filter: invert(1);
+	}
+}
+
+@keyframes rotate {
+	from {
+		transform: rotate(360deg);
+	}
+
+	to {
+		transform: rotate(0deg);
+	}
+}
