--- a/floor-plan/src/app/editor/editor.css
+++ b/floor-plan/src/app/editor/editor.css
@@ -159,31 +159,43 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-  }
+}
 
-  .container {
+.container {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	padding: 50px;
 	font-family: Arial, sans-serif;
-  }
-  
-  .file-input {
+}
+
+.file-input {
 	margin: 20px 0;
 	padding: 10px;
 	font-size: 16px;
-  }
-  
-  .canvas-container {
+}
+
+.canvas-container {
 	border: 1px solid #ccc;
 	padding: 10px;
-  }
+}
 
-  .icon {
+.icon {
 	width: 50px;
 	height: 50px;
 	margin: 10px;
 	cursor: pointer;
+}
+
+.lutronLogo {
+	max-width: 80%;
+	/* Adjust the size of the logo */
+	margin-bottom: 2rem;
+	align-self: center;
+	/* Center the logo in the sidebar */
+}
+
+.lutronLogo:hover {
+	transform: scale(1.05); /* Slightly increase size */
   }
